<resources>
    <string name="app_name">Oz Quiz</string>

    <string name="score">Score: </string>
    <string name="submit_answer">Submit answer</string>
    <string name="view_answer">View answer</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>

    <string name="choose">Make your choice</string>
    <string name="answer_is_correct">Your answer is correct</string>
    <string name="answer_is_incorrect">Your answer is incorrect</string>
    <string name="answer_is_incorrect_or_incomplete">Your answer is incorrect or incomplete</string>
    <string name="some_answer_incorrect">Some answer is incorrect</string>
    <string name="your_answer">Your answer:</string>
    <string name="enter_here">Enter here</string>
    <string name="enter_answer">Enter your answer</string>

    <!-- Quiz 00 -->
    <string name="quiz00">In which of the following regions is Australia?</string>
    <string name="quiz00_option01">1. Asia-Pacific</string>
    <string name="quiz00_option02">2. Oceania</string>
    <string name="quiz00_option03">3. South Asia</string>
    <string name="quiz00_option04">4. Australasia</string>
    <string name="quiz00_view_answer">"Australia is in Asia-Pacific, Oceania and Australasia."\n\n"Answers 1, 2 and 4 are correct."</string>

    <!-- Quiz 01-->
    <string name="quiz01">Which flag is Australian?</string>
    <string name="quiz01_view_answer01">The 4th flag is Australian.</string>
    <string name="quiz01_view_answer02">The 1st, 2nd and 3rd flags are New Zelander, Fijian and Tuvaluan.</string>

    <!-- Quiz 02-->
    <string name="quiz02">What is the capital of Australia?</string>
    <string name="quiz02_right_answer">Canberra</string>
    <string name="quiz02_view_answer">Canberra is the capital of Australia.</string>

    <!-- Quiz 03 -->
    <string name="quiz03">What is Tim Tam?</string>
    <string name="quiz03_option01i">1. A brand of cheese made in Australia.</string>
    <string name="quiz03_option02c">"2. Chocolate biscuit made by Arnott's."</string>
    <string name="quiz03_option03c">3. Is definitely a favourite in Australia.</string>
    <string name="quiz03_option04i">4. A herbivorous leaping marsupial mammal.</string>
    <string name="quiz03_view_answer01">"Answers 2 and 3 are correct."\n\n"Tim Tam is a brand of chocolate biscuit made by Arnott's. It consists of two malted biscuits separated by a light chocolate cream filling and coated in a thin layer of textured chocolate."</string>
    <string name="quiz03_view_answer02">"Tim Tam biscuits are definitely a favovourite in Australia, with one in every two households containing a packet of these biscuits."</string>

    <!-- Quiz 04 -->
    <string name="quiz04">"What is Australia's national anthem?"</string>
    <string name="quiz04_option01i">1. God Save the Queen</string>
    <string name="quiz04_option02c">"2. Advance Australia Fair</string>
    <string name="quiz04_option03i">3. Power And The Passion</string>
    <string name="quiz04_option04i">4. Great Southern Land</string>
    <string name="quiz04_view_answer01">"Advance Australia Fair is Australia's national anthem."\n</string>
    <string name="quiz04_view_answer02">"God Save the Queen is the British national anthem."\n"Power and the Passion is one of Midnight Oil's most famous songs."\n"Great Southern Land is a single released by the Australian rock band Icehouse in 1982."</string>

    <!-- Quiz 05-->
    <string name="quiz05">"Who is Australia's longest-serving prime minister?"</string>
    <string name="quiz05_right_answer">Robert Menzies</string>
    <string name="quiz05_view_answer">"Robert Menzies was the Prime Minister of Australia from 1939 to 1941 and again from 1949 to 1966. He is Australia's longest-serving prime minister, serving over 18 years in total."</string>

    <!-- For AlertDialog -->
    <string name="confirm_exit">Do you want to exit?</string>
    <string name="your_score_is">"Your score is "</string>
    <string name="confirm_exit_or_start_again">"You have gone through the last quiz."\n\n"Do you want to exit or start over again?"</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="start_again">Start again</string>
</resources>
