<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_quiz00"
    style="@style/QuizCheckBoxStyle"
    android:orientation="vertical"
    tools:context=".QuizFragment">

    <TextView
        style="@style/QuizTextViewStyle"
        android:text="@string/quiz00" />

    <CheckBox
        android:id="@+id/quiz00_checkbox_apac"
        style="@style/QuizCheckBoxStyle"
        android:text="@string/quiz00_option01" />

    <CheckBox
        android:id="@+id/quiz00_checkbox_oceania"
        style="@style/QuizCheckBoxStyle"
        android:text="@string/quiz00_option02" />

    <CheckBox
        android:id="@+id/quiz00_checkbox_south_asia"
        style="@style/QuizCheckBoxStyle"
        android:text="@string/quiz00_option03" />

    <CheckBox
        android:id="@+id/quiz00_checkbox_australasia"
        style="@style/QuizCheckBoxStyle"
        android:text="@string/quiz00_option04" />

</LinearLayout>
