<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <TextView
            style="@style/QuizTextViewStyle"
            android:text="@string/quiz03_view_answer01" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:scaleType="centerCrop"
            android:src="@drawable/tim_tam" />

        <TextView
            style="@style/QuizTextViewStyle"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:text="@string/quiz03_view_answer02" />

        <Button
            android:id="@+id/quiz03_button_ok"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/ok"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>