<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="com.oz_heng.apps.android.ozquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            tools:text="0" />

    </LinearLayout>

    <!-- An empty placeholder to contain for a Fragment layout -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_answer"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/view_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_answer"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

</LinearLayout>
